colors, socket conn, custom message ids

--- a/react-chat-frontend/src/styles/globals.css
+++ b/react-chat-frontend/src/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .dropdown-shadow {
+    box-shadow: 0 0.25rem 0.5rem 0.125rem rgba(114, 114, 114, 0.25098);
+  }
+}
+
+:root {
+  --active-item-color: #3390ec;
+}
