--- a/react-chat-frontend/src/styles/globals.css
+++ b/react-chat-frontend/src/styles/globals.css
@@ -7,7 +7,7 @@
   --text-color: #000000;
   --active-item-color: #3390ec;
   --icon-color: #707579;
-  --icon-hover-color: #ededed;
+  --icon-hover-color: rgba(112, 117, 121, 0.08);
   --border-color: #dadce0;
   --chat-hover-color: #f4f4f5;
   --chat-message-color: #ffffff;
@@ -24,6 +24,8 @@
   --emoji-picker-bg: 255 255 255;
   --emoji-picker-color: 51 144 236;
   --scrollbar-color: rgba(90, 90, 90, 0.3);
+  --patern-color: #4a8e3a8c;
+  --modal-background: rgba(0, 0, 0, 0.9);
 }
 
 body[data-theme='dark'] {
@@ -48,6 +50,8 @@ body[data-theme='dark'] {
   --emoji-picker-bg: 33 33 33;
   --emoji-picker-color: 118 106 200;
   --scrollbar-color: rgba(90, 90, 90, 0.3);
+  --patern-color: #0a0a0a8c;
+  --modal-background: rgba(0, 0, 0, 0.9);
 }
 
 em-emoji-picker {
@@ -85,5 +89,56 @@ em-emoji-picker {
     box-shadow: 0 0.25rem 0.5rem 0.125rem var(--dropdown-shadow-color);
     backdrop-filter: blur(10px);
     background: var(--dropdown-background-color);
+  }
+}
+
+/* Message styles */
+@layer components {
+  .message {
+  }
+
+  .message::before,
+  .message::after {
+    bottom: -0.1rem;
+    content: '';
+    height: 1rem;
+    position: absolute;
+  }
+
+  .own {
+  }
+  .own::before {
+    border-bottom-left-radius: 0.9rem 0.1rem;
+    border-top-right-radius: 2rem;
+    border-right: 1rem solid var(--chat-message-own-color);
+    right: -0.3rem;
+    transform: translate(0, -0.1rem);
+  }
+
+  .own::after {
+    background-color: var(--chat-box-background-color);
+    border-bottom-left-radius: 0.5rem;
+    right: -40px;
+    transform: translate(-30px, -2px);
+    width: 10px;
+  }
+
+  .other {
+  }
+
+  .other::before {
+    border-bottom-right-radius: 0.9rem 0.1rem;
+    border-top-left-radius: 2rem;
+    border-left: 1rem solid var(--chat-message-color);
+    left: -0.3rem;
+    transform: translate(0, -0.1rem);
+  }
+
+  .other::after {
+    background-color: var(--chat-box-background-color);
+    border-bottom-right-radius: 0.5rem;
+    left: 20px;
+    transform: translate(-30px, -2px);
+    width: 10px;
   }
 }
