--- a/react-chat-frontend/src/styles/globals.css
+++ b/react-chat-frontend/src/styles/globals.css
@@ -27,6 +27,7 @@
   --scrollbar-color: rgba(90, 90, 90, 0.3);
   --patern-color: #4a8e3a8c;
   --modal-background: rgba(0, 0, 0, 0.9);
+  --accent-color: rgb(69 175 84);
 }
 
 body[data-theme='dark'] {
@@ -54,6 +55,7 @@ body[data-theme='dark'] {
   --scrollbar-color: rgba(90, 90, 90, 0.3);
   --patern-color: #0a0a0a8c;
   --modal-background: rgba(0, 0, 0, 0.9);
+  --accent-color: rgb(255 255 255);
 }
 
 em-emoji-picker {
